# DLRS

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CONTRIBUTING.en.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: COLLECTION_STANDARD.md  COMPLIANCE_CHECKLIST.md  FAQ.en.md  FAQ.md  GAP_ANALYSIS.md  HIGH_FIDELITY_GUIDE.md  IMPLEMENTATION_STATUS.md  LFS_GUIDE.md  LIFE_ASSET_ARCHITECTURE.md  LIFE_BINDING_SPEC.md  LIFE_FILE_STANDARD.md  LIFE_GENESIS_SPEC.md  LIFE_LIFECYCLE_SPEC.md  LIFE_RUNTIME_STANDARD.md  LIFE_TIER_SPEC.md  OBJECT_STORAGE_POINTERS.md  PIPELINE_GUIDE.md  getting-started.en.md  getting-started.md
examples/: README.en.md  README.md
pipelines/: __init__.py  _audit_bridge.py  _descriptor.py  _hosted_api.py
registry/: index.html
runtime/: README.md  __init__.py
schemas/: README.md  audit-event.schema.json  binding.schema.json  consent.schema.json  derived-asset.schema.json  entity-graph-edge.schema.json  entity-graph-node.schema.json  genesis.schema.json  hosted-api-policy.schema.json  life-package.schema.json  lifecycle.schema.json  manifest.schema.json  memory-atom.schema.json  pointer.schema.json  public-profile.schema.json  registry-entry.schema.json  tier.schema.json
tools/: README.md  batch_validate.py  build_life_package.py  build_registry.py  emit_audit_event.py  estimate_costs.py  lint_schemas.py  test_asr_pipeline.py  test_binding_schema.py  test_descriptor_audit_bridge.py  test_entity_graph_schema.py  test_genesis_schema.py  test_hosted_api_policy.py  test_life_package_schema.py  (+15 more)
(+75 files in other folders)
