[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlrs-runtime"
version = "0.9.0.dev0"
description = "DLRS reference runtime — `life-runtime v0.1.1` reference implementation."
readme = "runtime/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "DLRS contributors" },
]
keywords = ["dlrs", "life", "digital-life", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
lifectl = "runtime.cli.lifectl:main"

[project.urls]
Homepage = "https://github.com/Digital-Life-Repository-Standard/DLRS"
Repository = "https://github.com/Digital-Life-Repository-Standard/DLRS"
Issues = "https://github.com/Digital-Life-Repository-Standard/DLRS/issues"
Spec = "https://github.com/Digital-Life-Repository-Standard/DLRS/blob/master/docs/LIFE_RUNTIME_STANDARD.md"

[tool.setuptools.packages.find]
include = ["runtime*"]
exclude = ["tools*", "pipelines*", "examples*", "tests*"]
